--- a/tbb.users.api/tbb.users.api/appsettings.json
+++ b/tbb.users.api/tbb.users.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Thoufeeq_Niyaz;Initial Catalog=tbb_users_db;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
