--- a/tbb.users.api/appsettings.json
+++ b/tbb.users.api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Thoufeeq_Niyaz;Initial Catalog=tbb_users_db;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=syedasad\\MSSQLSERVER04Initial Catalog=tbb_users_db;Integrated Security=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "MySuperSecretKey12345",
